--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="is-unselectable">
   <head>
     <meta charset="UTF-8">
-    <title>CssDN</title>
+    <title>Team Iridium</title>
     <link rel="stylesheet" href="css/bulma.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -13,16 +13,16 @@
           <div class="container">
             <div class="nav-left">
               <a class="nav-item" href="#">
-                <h2 class="title is-2">CssDN</h2>
+                <h2 class="title is-2">Team Iridium</h2>
               </a>
             </div>
             </span>
             <div class="nav-right nav-menu">
               <a class="nav-item is-active" href="#">Home</a>
               <a class="nav-item" href="#learn-more">About</a>
-              <a class="nav-item" href="#libraries">Libraries</a>
+              <a class="nav-item" href="#projects">Projects</a>
               <span class="nav-item">
-              <a class="button is-primary is-inverted" target="_blank" href="http://github.com/Deletescape-Media/CssDN">
+              <a class="button is-primary is-inverted" target="_blank" href="http://github.com/TeamIridium">
               <span class="icon"><i class="fa fa-github"></i></span>
               <span>View On GitHub</span>
               </a>
@@ -34,10 +34,10 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <h1 class="title is-1">
-            CssDN
+            Team Iridium
           </h1>
           <h2 class="subtitle is-3">
-            CDN but different
+            Never eat iridium, flash it!
           </h2>
           <a class="button is-large is-primary is-inverted is-outlined" href="#learn-more">Learn More</a>
         </div>
@@ -81,12 +81,12 @@
       <div class="hero-foot">
         <nav class="tabs" style="justify-content: center;">
           <div class="container">
-            <a href="#libraries"><span class="icon is-large"><i class="fa fa-chevron-down"></i></span></a>
+            <a href="#projects"><span class="icon is-large"><i class="fa fa-chevron-down"></i></span></a>
           </div>
         </nav>
       </div>
     </section>
-    <section id="libraries" class="hero is-fullheight is-bold">
+    <section id="projects" class="hero is-fullheight is-bold">
       <div class="hero-head">
         <nav class="tabs" style="justify-content: center;">
           <div class="container">
@@ -217,11 +217,10 @@
       <div class="container">
         <div class="content is-medium has-text-centered">
           <p>
-            <strong>CssDN</strong> by <a target="_blank" href="http://deletescape.ch">Deletescape Media</a>. The source code is licensed
-            <a target="_blank" href="http://opensource.org/licenses/mit-license.php">MIT</a>. This website was built using <a target="_blank" href="http://bulma.io">Bulma</a>.
+            This website was built by <a target="_blank" href="http://deletescape.ch">Deletescape Media</a> using <a target="_blank" href="http://bulma.io">Bulma</a>.
           </p>
           <p>
-            <a class="icon" target="_blank" href="https://github.com/Deletescape-Media/CssDN">
+            <a class="icon" target="_blank" href="https://github.com/TeamIridium">
             <i class="fa fa-github"></i>
             </a>
           </p>
