--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
     <a href="#" class="is-overlay tag is-medium" style="position: fixed; left: auto; top: auto;bottom: 20px; right: 20px;">
       <span class="icon is-medium"><i class="fa fa-chevron-up"></i></span> To the top
     </a>
-    <script src="http://deletescape-media.github.io/CssDN/js/scale.fix.min.js"></script>
-    <script src="http://deletescape-media.github.io/CssDN/js/zenscroll.min.js"></script>
+    <script src="https://deletescape-media.github.io/CssDN/js/scale.fix.min.js"></script>
+    <script src="https://deletescape-media.github.io/CssDN/js/zenscroll.min.js"></script>
     <script>zenscroll.setup(null,0)</script>
   </body>
 </html>
