--- a/index.html
+++ b/index.html
@@ -1,237 +1,122 @@
 <!DOCTYPE html>
 <html class="is-unselectable">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Team Iridium</title>
     <link rel="stylesheet" href="css/bulma.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <section class="hero is-fullheight is-primary is-bold">
-      <div class="hero-head">
-        <header class="nav">
-          <div class="container">
-            <div class="nav-left">
-              <a class="nav-item" href="#">
-                <h2 class="title is-2">Team Iridium</h2>
-              </a>
-            </div>
-            </span>
-            <div class="nav-right nav-menu">
-              <a class="nav-item is-active" href="#">Home</a>
-              <a class="nav-item" href="#learn-more">About</a>
-              <a class="nav-item" href="#projects">Projects</a>
-              <span class="nav-item">
+        <div class="hero-head">
+            <header class="nav">
+                <div class="container">
+                    <div class="nav-left">
+                        <a class="nav-item" href="#">
+                            <h2 class="title is-2">Team Iridium</h2>
+                        </a>
+                    </div>
+                    </span>
+                    <div class="nav-right nav-menu">
+                        <a class="nav-item is-active" href="#">Home</a>
+                        <a class="nav-item" href="#learn-more">About</a>
+                        <a class="nav-item" href="#projects">Projects</a>
+                        <span class="nav-item">
               <a class="button is-primary is-inverted" target="_blank" href="http://github.com/TeamIridium">
               <span class="icon"><i class="fa fa-github"></i></span>
-              <span>View On GitHub</span>
-              </a>
-              </span>
-            </div>
-          </div>
-        </header>
-      </div>
-      <div class="hero-body">
-        <div class="container has-text-centered">
-          <h1 class="title is-1">
+                        <span>View On GitHub</span>
+                        </a>
+                        </span>
+                    </div>
+                </div>
+            </header>
+        </div>
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title is-1">
             Team Iridium
           </h1>
-          <h2 class="subtitle is-3">
-            Never eat iridium, flash it!
+                <h2 class="subtitle is-3">
+            Don't eat iridium, flash it!
           </h2>
-          <a class="button is-large is-primary is-inverted is-outlined" href="#learn-more">Learn More</a>
+                <a class="button is-large is-primary is-inverted is-outlined" href="#learn-more">Learn More</a>
+            </div>
         </div>
-      </div>
-      <div class="hero-foot">
-        <nav class="tabs" style="justify-content: center;">
-          <div class="container">
-            <a href="#learn-more"><span class="icon is-large"><i class="fa fa-chevron-down"></i></span></a>
-          </div>
-        </nav>
-      </div>
-    </section>
-    <section id="learn-more" class="hero is-primary is-inverted is-bold is-fullheight">
-      <div class="hero-head">
-        <nav class="tabs" style="justify-content: center;">
-          <div class="container">
-            <a href="#"><span class="icon is-large"><i class="fa fa-chevron-up"></i></span></a>
-          </div>
-        </nav>
-      </div>
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title is-1">About CssDN</h1>
-          <h2 class="title is-2">Easy</h2>
-          <h4 class="subtitle is-4">A CDN should be simple</h4>
-          <div class="content is-large">
-            <p>CssDN provides you with the simplest CDN URLs we could think of!</p>
-          </div>
-          <h2 class="title is-2">Quick</h2>
-          <h4 class="subtitle is-4">A CDN should be fast</h4>
-          <div class="content is-large">
-            <p>Hosted on GitHub pages we can provide speedy downloads for other GitHub pages projects, but also for all external sites</p>
-          </div>
-          <h2 class="title is-2">Fresh</h2>
-          <h4 class="subtitle is-4">A CDN should be up to date</h4>
-          <div class="content is-large">
-            <p>Thanks to daily builds on Travis-CI your page will always get the latest library changes in just one day</p>
-          </div>
-        </div>
-      </div>
-      <div class="hero-foot">
-        <nav class="tabs" style="justify-content: center;">
-          <div class="container">
-            <a href="#projects"><span class="icon is-large"><i class="fa fa-chevron-down"></i></span></a>
-          </div>
-        </nav>
-      </div>
-    </section>
-    <section id="projects" class="hero is-fullheight is-bold">
-      <div class="hero-head">
-        <nav class="tabs" style="justify-content: center;">
-          <div class="container">
-            <a href="#learn-more"><span class="icon is-large"><i class="fa fa-chevron-up"></i></span></a>
-          </div>
-        </nav>
-      </div>
-      <div class="hero-body">
-        <div class="container has-text-centered">
-          <h1 class="title is-1">Hosted Libraries</h1>
-          <h3 class="subtitle is-3">Featured</h3>
-          <div class="columns">
-            <div class="column">
-              <div class="card selectable">
-                <header class="card-header">
-                  <a target="_blank" href="http://bulma.io" class="card-header-title">
-                  Bulma
-                  </a>
-                </header>
-                <div class="card-content">
-                  <article class="media">
-                    <figure class="media-left">
-                      <p class="image is-32x32">
-                        <img src="https://cdn.rawgit.com/jgthms/bulma/master/docs/images/bulma-icon.png">
-                      </p>
-                    </figure>
-                    <div class="media-content">
-                      <div class="content">
-                        <p>A <strong>modern</strong> CSS framework based on <strong>Flexbox</strong></p>
-                      </div>
-                    </div>
-                  </article>
-                  </div>
-                  <footer class="card-footer">
-                    <a target="_blank" href="https://github.com/Deletescape-Media/CssDN/tree/master#bulma" class="card-footer-item">Files</a>
-                    <a target="_blank" href="http://bulma.io" class="card-footer-item">Webpage</a>
-                  </footer>
+        <div class="hero-foot">
+            <nav class="tabs" style="justify-content: center;">
+                <div class="container">
+                    <a href="#learn-more"><span class="icon is-large"><i class="fa fa-chevron-down"></i></span></a>
                 </div>
-              </div>
-              <div class="column">
-                <div class="card ">
-                  <header class="card-header">
-                    <a target="_blank" href="https://jquery.com" class="card-header-title">
-                    jQuery
-                    </a>
-                  </header>
-                  <div class="card-content">
-                    <article class="media">
-                      <figure class="media-left">
-                        <p class="image is-32x32">
-                          <img src="assets/jquery-icon.png">
-                        </p>
-                      </figure>
-                      <div class="media-content">
-                        <div class="content">
-                          <p>jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.</p>
-                        </div>
-                      </div>
-                    </article>
-                    </div>
-                    <footer class="card-footer">
-                      <a target="_blank" href="https://github.com/Deletescape-Media/CssDN/tree/master#jquery" class="card-footer-item">Files</a>
-                      <a target="_blank" href="https://jquery.com" class="card-footer-item">Webpage</a>
-                    </footer>
-                  </div>
-              </div>
-              <div class="column">
-                <div class="card ">
-                  <header class="card-header">
-                    <a target="_blank" href="https://getmdl.io/" class="card-header-title">
-                    Material Design Lite
-                    </a>
-                  </header>
-                  <div class="card-content">
-                    <article class="media">
-                      <figure class="media-left">
-                        <p class="image is-32x32">
-                          <img src="https://cdn.rawgit.com/google/material-design-lite/mdl-1.x/docs/_assets/logo.png">
-                        </p>
-                      </figure>
-                      <div class="media-content">
-                        <div class="content">
-                          <p>Material Design Lite lets you add a Material Design look and feel to your websites. It doesn’t rely on any JavaScript frameworks and aims to optimize for cross-device use, gracefully degrade in older browsers, and offer an experience that is immediately accessible.</p>
-                        </div>
-                      </div>
-                    </article>
-                    </div>
-                    <footer class="card-footer">
-                      <a target="_blank" href="https://github.com/Deletescape-Media/CssDN/tree/master#material-design-light" class="card-footer-item">Files</a>
-                      <a target="_blank" href="https://getmdl.io/" class="card-footer-item">Webpage</a>
-                    </footer>
-                  </div>
-              </div>
-              <div class="column">
-                <div class="card ">
-                  <header class="card-header">
-                    <a target="_blank" href="http://necolas.github.io/normalize.css/" class="card-header-title">
-                    normalize.css
-                    </a>
-                  </header>
-                  <div class="card-content">
-                    <article class="media">
-                      <figure class="media-left">
-                        <p class="image is-32x32">
-                          <img src="https://necolas.github.io/normalize.css/logo.svg">
-                        </p>
-                      </figure>
-                      <div class="media-content">
-                        <div class="content">
-                          <p>A modern alternative to CSS resets</p>
-                        </div>
-                      </div>
-                    </article>
-                    </div>
-                    <footer class="card-footer">
-                      <a target="_blank" href="https://github.com/Deletescape-Media/CssDN/tree/master#normalizecss" class="card-footer-item">Files</a>
-                      <a target="_blank" href="http://necolas.github.io/normalize.css/" class="card-footer-item">Webpage</a>
-                    </footer>
-                  </div>
+            </nav>
+        </div>
+    </section>
+    <section id="learn-more" class="hero is-dark is-bold is-fullheight">
+        <div class="hero-head">
+            <nav class="tabs" style="justify-content: center;">
+                <div class="container">
+                    <a href="#"><span class="icon is-large"><i class="fa fa-chevron-up"></i></span></a>
+                </div>
+            </nav>
+        </div>
+        <div class="hero-body">
+            <div class="container">
+              <div class="box">
+                <article class="content is-large has-text-centered">
+                <h1>About Team Iridium</h1>
+                Team Iridium is just another <strong>Android</strong> development team founded by some crazy OnePlus 2 owners who love to work for their devices. They even brick their daily driver devices so you will be safe when flashing their amazing
+                roms or installing any nice app created by the team.
+                </article>
               </div>
             </div>
-            <a class="button is-large is-light is-inverted is-outlined" target="_blank" href="https://github.com/Deletescape-Media/CssDN/tree/master#hosted-libraries">Full List</a>
-          </div>
         </div>
-      </div>
+        <div class="hero-foot">
+            <nav class="tabs" style="justify-content: center;">
+                <div class="container">
+                    <a href="#projects"><span class="icon is-large"><i class="fa fa-chevron-down"></i></span></a>
+                </div>
+            </nav>
+        </div>
+    </section>
+    <section id="projects" class="hero is-primary is-inverted is-fullheight is-bold">
+        <div class="hero-head">
+            <nav class="tabs" style="justify-content: center;">
+                <div class="container">
+                    <a href="#learn-more"><span class="icon is-large"><i class="fa fa-chevron-up"></i></span></a>
+                </div>
+            </nav>
+        </div>
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title is-1">Projects</h1>
+                <h4 class="subtitle is-4">Coming soon...</h4>
+            </div>
+        </div>
+        </div>
     </section>
     <footer id="footer" class="footer">
-      <div class="container">
-        <div class="content is-medium has-text-centered">
-          <p>
-            This website was built by <a target="_blank" href="http://deletescape.ch">Deletescape Media</a> using <a target="_blank" href="http://bulma.io">Bulma</a>.
-          </p>
-          <p>
-            <a class="icon" target="_blank" href="https://github.com/TeamIridium">
-            <i class="fa fa-github"></i>
-            </a>
-          </p>
+        <div class="container">
+            <div class="content is-medium has-text-centered">
+                <p>
+                    This website was built by <a target="_blank" href="http://deletescape.ch">Deletescape Media</a> using <a target="_blank" href="http://bulma.io">Bulma</a>.
+                </p>
+                <p>
+                    <a class="icon" target="_blank" href="https://github.com/TeamIridium">
+                        <i class="fa fa-github"></i>
+                    </a>
+                </p>
+            </div>
         </div>
-      </div>
     </footer>
     <a href="#" class="is-overlay tag is-medium" style="position: fixed; left: auto; top: auto;bottom: 20px; right: 20px;">
-      <span class="icon is-medium"><i class="fa fa-chevron-up"></i></span> To the top
+        <span class="icon is-medium"><i class="fa fa-chevron-up"></i></span> To the top
     </a>
     <script src="https://deletescape-media.github.io/CssDN/js/scale.fix.min.js"></script>
     <script src="https://deletescape-media.github.io/CssDN/js/zenscroll.min.js"></script>
-    <script>zenscroll.setup(null,0)</script>
-  </body>
+    <script>
+        zenscroll.setup(null, 0)
+    </script>
+</body>
+
 </html>
